--- a/env.example
+++ b/env.example
@@ -1,11 +1,12 @@
 # Anthropic Claude API Key
 ANTHROPIC_API_KEY=your_api_key_here
 
-# LLM Model (default: claude-haiku-4-5, all anthripoc models are supported)
+# LLM Model (default: claude-haiku-4-5, all Anthropic models are supported)
 LLM_MODEL=claude-haiku-4-5
 
 # Wispr Flow Database Path (default: ~/Library/Application Support/Wispr Flow/flow.sqlite)
-WISPR_DB_PATH=~/Library/Application Support/Wispr Flow/flow.sqlite
+# Note: Quote paths that contain spaces
+WISPR_DB_PATH="~/Library/Application Support/Wispr Flow/flow.sqlite"
 
 # Activation word that triggers command processing
 ACTIVATION_WORD=command
@@ -13,8 +14,8 @@ ACTIVATION_WORD=command
 # Polling interval in seconds
 POLL_INTERVAL=1.5
 
-# Web UI port
-WEB_PORT=5000
+# Web UI port (default: 9000)
+WEB_PORT=9000
 
 # Enable confirmation mode for testing (true/false)
 CONFIRM_MODE=false
