Add MCP server authentication overrides and configuration helpers
- Introduced a new file for handling authentication overrides for popular MCP servers with incomplete registry data.
- Added a catalog configurator to facilitate the creation of MCP server configurations from catalog entries.
- Updated .gitignore to include the new mcp_servers.json file.
- Removed the obsolete wisprflow_monitor.py file to streamline the codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,9 @@ logs/
 
 # User data
 commands.json
+mcp_servers.json
 
 # macOS
 .DS_Store
-execution_history.db
 execution_history.db
 wispr_act.db
