feat: Add Composio OAuth integration and TTS result reading
- Add Composio OAuth flow for MCP servers (GitHub, Gmail, Slack, etc.)
- Add text-to-speech result reading with Apple TTS and Cartesia support
- Refactor MCP editor into modular components (catalog, composio, custom)
- Add settings modal for Composio API key management
- Store secrets securely in macOS Keychain
- Add composio-core dependency to requirements.txt
- Update env.example with TTS configuration options
- Update README with MCP Clients documentation

--- a/env.example
+++ b/env.example
@@ -20,3 +20,15 @@ WEB_PORT=9000
 # Enable confirmation mode for testing (true/false)
 CONFIRM_MODE=false
 
+# Read command name aloud before execution using macOS voice (true/false)
+READ_COMMAND_ALOUD=true
+
+# Text-to-Speech Configuration
+# TTS_PROVIDER: "apple" (macOS built-in) or "cartesia" (Cartesia AI)
+TTS_PROVIDER=apple
+
+# Cartesia API Configuration (only needed if TTS_PROVIDER=cartesia)
+CARTESIA_API_KEY=your_cartesia_api_key_here
+CARTESIA_MODEL_ID=sonic-3
+CARTESIA_VOICE_ID=a0e99841-438c-4a64-b679-ae501e7d6091
+
